fix: unifica dependências no requirements.txt da raiz para deploy estável no Railway

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
+
 fastapi
 uvicorn
 sqlalchemy
+pydantic
+python-jose
 passlib
+psycopg2-binary
+openai
 bcrypt==3.2.2
 python-multipart
 gunicorn
-python-multipart==0.0.6
