--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,14 @@ fastapi
 uvicorn
 sqlalchemy
 pydantic
-python-jose
-passlib
+python-jose[cryptography]
+passlib[bcrypt]
 psycopg2-binary
 openai
 bcrypt==3.2.2
 python-multipart
 gunicorn
+fastapi
+sqlalchemy
+uvicorn
+redis
