--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,2 @@
-
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-sqlalchemy==2.0.38
-pydantic==2.10.6
-python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
-psycopg2-binary==2.9.10
-bcrypt==4.0.1
-python-multipart==0.0.6
-gunicorn==21.2.0
-redis==5.0.1
-alembic==1.12.1
-python-dotenv==1.0.0
-aiofiles==23.2.1
-pydantic-settings==2.7.1
-email-validator==2.1.1
+requests==2.31.0
+httpx==0.27.0
